[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["full"] }
hyper-reverse-proxy = { git = "https://code.betamike.com/micropelago/hyper-reverse-proxy.git", branch = "master" }
hyper-rustls = { version = "0.27.7", features = ["http2"] }
hyper-util = { version = "0.1.18", features = ["full"] }
rustls = "0.23.35"
rustls-pemfile = "2.2.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-rustls = "0.26.4"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
